Fixed CSS distortion
git-svn-id: https://plugins.svn.wordpress.org/wp-evs/trunk@911024 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/evs.css
+++ b/assets/evs.css
@@ -6,8 +6,8 @@
 [data-role="evp-splittest"] embed,
 [data-role="evp-playlist"] video,
 [data-role="evp-playlist"] object
-[data-role="evp-playlist"] embed { max-width: none !important; max-width: none; width: inherit; }
+[data-role="evp-playlist"] embed { max-width: none !important; max-width: none; width: inherit; height: inherit; }
 
 [data-role="evp-video"] img,
 [data-role="evp-splittest"] img,
-[data-role="evp-playlist"] img { max-width: none !important; max-width: none; }
+[data-role="evp-playlist"] img { max-width: none !important; max-width: none; width: inherit; height: inherit; }
